# sec_filings_for_real-x

./: README.md  pyproject.toml
api/: app.py
api/src/: filing_handler.py
api/src/labelers/: authorization_labeler.py  labeler_protocol.py  repurchase_labeler.py
api/src/parsers/: authorization_parser.py  repurchase_parser.py
api/src/pipelines/: authorization_pipeline.py  pipeline_protocol.py  repurchase_pipeline.py
api/src/scraper/: sec_scraper.py
api/src/utils/: html_reader.py
api/tests/: test_filing_handler.py
api/tests/labelers/: test_authorization_labeler.py  test_repurchase_labeler.py
api/tests/parsers/: test_authorization_parser.py  test_repurchase_parser.py
api/tests/utils/: test_html_reader.py
data/: annotations.json  azz-20220228.html  earn-20211231.htm  ful20210928_10k.htm  info-20211130.htm  kbh-20211130.htm  kmx-20220228.html  lake_10k.html  mtn-20210731.htm  panw-20210731.htm  siri-20211231.htm  tlys-20220129.html  uri-20211231.htm
src/: filing_handler.py
src/labelers/: authorization_labeler.py  labeler_base.py  repurchase_labeler.py
src/parsers/: authorization_parser.py  parser_base.py  parser_protocol.py  repurchase_parser.py
src/pipelines/: authorization_pipeline.py  repurchase_pipeline.py
src/utils/: html_reader.py
tests/: test_filing_handler.py
tests/labelers/: test_authorization_labeler.py  test_repurchase_labeler.py
tests/parsers/: test_authorization_parser.py  test_repurchase_parser.py
tests/utils/: test_html_reader.py
webapp/: package-lock.json  package.json
webapp/src/: App.tsx
webapp/src/alert/: alert.tsx
(+21 files in other folders)
